fix(style): increase z-index for medium-zoom overlay

--- a/src/styles/markdown.less
+++ b/src/styles/markdown.less
@@ -459,7 +459,7 @@
 
 .medium-zoom {
 	&-overlay {
-		z-index: 1;
+		z-index: 2;
 	}
 
 	&-image--opened {
